# postgresQuery

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  query_history.db
src/: app.rs  db.rs  highlighter.rs  history.rs  main.rs  profiles.rs  recent.rs  schema.rs  snippets.rs  utils.rs
