[package]
name = "postgres_query_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced"] }
tokio-postgres     = "0.7"
tokio              = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
postgres-native-tls = "0.5"
native-tls          = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono   = { version = "0.4", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
zeroize    = { version = "1", features = ["derive"] }
serde_json = "1"
rfd              = "0.15"
rust_xlsxwriter  = "0.79"
sqlformat        = "0.3"
keyring    = "3.6.3"
dirs-next  = "2"
